--- a/ECMAScript5.1中文版_files/basic.css
+++ b/ECMAScript5.1中文版_files/basic.css
@@ -5,11 +5,12 @@ html {
 body {
     margin-left:auto;
     margin-right:auto;
-    padding:0 0 0 400px;
+    padding:0 0 0 410px;
     margin:32px 0 0 0;
     box-sizing:border-box;
     -webkit-box-sizing:border-box;
-    font-family:arial,Hiragino Sans GB,宋体;
+    font-family:arial,Hiragino Sans GB,\5B8B\4F53;
+    counter-reset: level1 0 table 0 annex 0 note 0;
 }
 code.block {
     border: solid 1px #ABCDF3;
@@ -19,10 +20,10 @@ code.block {
 }
 h1,h2,h3,h4,h5,h6 {
     color:#005A9C;
-    font-family:"Hiragino Sans GB","WenQuanYi Micro Hei","Microsoft YaHei",sans-serif; 
+    font-family:"Hiragino Sans GB","WenQuanYi Micro Hei","Microsoft YaHei",sans-serif;
 }
 p::before {
-    content:"　　";;
+    content:"　　";
 }
 .note {
     color:darkgreen
@@ -73,10 +74,6 @@ figure table
 {
     margin-left: auto;
     margin-right: auto;
-}
-body
-{
-    counter-reset: level1 0 table 0 annex 0 note 0;
 }
 h1.chapter
 {
@@ -210,25 +207,11 @@ ul ol
 .toc li {
     list-style-type: none;
 }
-html 
+html
 {
     height:100%;
     width:100%;
 }
-body 
-{
-    display:-webkit-box;
-    display:-moz-box;
-    display:box;
-    -moz-box-orient : vertical; 
-    -webkit-box-orient : vertical; 
-    box-orient : vertical;
-    height:100%;
-    width: 100%;
-}
-
-
-
 .toc {
     counter-reset: toclevel1 0 tocannex 0;
     padding-left:0;
@@ -240,7 +223,7 @@ body
 
 .toc a,a:link,a:visited{
     color:#005A9C;
-    font-family:"Hiragino Sans GB","WenQuanYi Micro Hei","Microsoft YaHei",sans-serif; 
+    font-family:"Hiragino Sans GB","WenQuanYi Micro Hei","Microsoft YaHei",sans-serif;
 }
 .toc ol,li
 {
@@ -337,11 +320,11 @@ body
 #title {
     text-align:center;
 }
-header 
+header
 {
     width:100%;
 }
-nav 
+nav
 {
     z-index:3;
     line-height:28px;
@@ -351,7 +334,7 @@ nav
 
 }
 
-nav :link,:visited 
+nav :link,:visited
 {
     color:Yellow;
     margin:0px 5px 0px 5px;
@@ -363,17 +346,17 @@ nav :link:hover
     text-decoration:underline;
 }
 
-#userAvatar 
+#userAvatar
 {
     margin:5px 5px 5px 5px;
 }
 
-nav * 
+nav *
 {
     vertical-align:middle;
 }
 
-.mask 
+.mask
 {
     z-index:5;
     background:rgba(0,0,0,.3);
@@ -385,8 +368,8 @@ nav *
     display:-webkit-box;
     display:-moz-box;
     display:box;
-    -moz-box-orient : horizontal; 
-    -webkit-box-orient : horizontal; 
+    -moz-box-orient : horizontal;
+    -webkit-box-orient : horizontal;
     box-orient : horizontal;
     -webkit-box-pack: center;
     -webkit-box-align: center;
@@ -414,7 +397,7 @@ nav *
     box-sizing:border-box;
     width:500px;
     margin:1em 1em 1em 1em;
-    
+
 }
 
 .popup_content>textarea
@@ -433,7 +416,7 @@ aside
     background:white;
     -webkit-box-sizing:border-box;
     -moz-box-sizing:border-box;
-    box-sizing:border-box;  
+    box-sizing:border-box;
     position:absolute;
     top:0px;
     left:0px;
@@ -445,7 +428,7 @@ aside
 {
     width:100%;
     height:100%;
-    overflow-y:scroll;    
+    overflow-y:scroll;
     overflow-x:hidden;
     -webkit-box-sizing:border-box;
     -moz-box-sizing:border-box;
@@ -461,7 +444,7 @@ aside
     padding:1em 1em 1em 1em;
 }
 
-nav 
+nav
 {
     position:absolute;
     top:0px;
