--- a/ECMAScript5.1中文版_files/basic.css
+++ b/ECMAScript5.1中文版_files/basic.css
@@ -374,7 +374,7 @@ nav *
     -webkit-box-pack: center;
     -webkit-box-align: center;
     -moz-box-pack: center;
-    -moz-box-align: center;;
+    -moz-box-align: center;
 }
 
 .popup_content
