优化大屏阅读体验 删除临时文件

--- a/css/basic.css
+++ b/css/basic.css
@@ -272,6 +272,11 @@ ul ol {
     cursor:pointer;
 }
 /* 大屏幕 */
+@media (min-width: 1700px) {
+    .content.hasNav{
+        margin: auto;
+    }
+}
 @media (min-width: 1300px) {
     .content.hasNav{
         margin-left: 400px;
